sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nbValue = getValueCount();
  var fin = false;
  while(!fin) {
    var echange = false;
    
    var i = 0; 
    while(i < nbValue-1) {
      var x = getValue(i);
      var y = getValue(i+1);
      
      i++;
    }
    
    
    if(echange) {
      fin = false;
    }
  }
}
